[gd_scene load_steps=2 format=3 uid="uid://n0i6hl0xswsc"]

[ext_resource type="Script" uid="uid://c5g3mnobn7tme" path="res://src/menus/auth_manager.gd" id="1_u8v5j"]

[node name="SignInMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u8v5j")

[node name="Status" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -162.0
offset_top = -104.5
offset_right = 162.0
offset_bottom = -81.5
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -162.0
offset_top = -75.5
offset_right = 162.0
offset_bottom = 75.5
grow_horizontal = 2
grow_vertical = 2

[node name="Email" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Email"

[node name="Password" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Password"
secret = true

[node name="SignInBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "login"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Don't have an account?"

[node name="LinkToSignUp" type="LinkButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Sign up"

[connection signal="pressed" from="VBoxContainer/SignInBtn" to="." method="_on_log_in_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/LinkToSignUp" to="." method="_on_link_to_sign_up_pressed"]
