[gd_scene load_steps=2 format=3 uid="uid://c3k5xwq38qepi"]

[ext_resource type="Script" uid="uid://c5g3mnobn7tme" path="res://src/menus/auth_manager.gd" id="1_puoug"]

[node name="SignUpMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_puoug")

[node name="Status" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -162.0
offset_top = -123.5
offset_right = 162.0
offset_bottom = -100.5
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -162.0
offset_top = -95.0
offset_right = 162.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2

[node name="Email" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Email"

[node name="Password" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Password"
secret = true

[node name="ConfirmPassword" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Confirm Password"
secret = true

[node name="SignUpBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Sign up"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Already have an account?"

[node name="LinkToSignIn" type="LinkButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Sign in"

[connection signal="pressed" from="VBoxContainer/SignUpBtn" to="." method="_on_register_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/LinkToSignIn" to="." method="_on_link_to_sign_in_pressed"]
